objects/Process__c.object
<CustomObject>
    <fields>
        <fullName>AIA_Days_taken_to_complete_the_process__c</fullName>
        <formula>IF(AND( Sub_Process_Count__c &gt; 0,Sub_Process_Count__c =  AIA_Number_of_Completed_Sub_Process__c ), AIA_Process_End_Date__c -  AIA_Process_Start_Date__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days taken to complete the process</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AIA_Number_of_Completed_Sub_Process__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Completed Sub Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AIA_Process_End_Date__c</fullName>
        <description>Date to Capture End date of the process</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Process End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AIA_Process_Start_Date__c</fullName>
        <description>Date field to capture capture start date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Process Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field used to check whether process record is active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Sub_Process_Must_Be_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean check to see if all the sub process are completed underneath Process</description>
        <label>All Sub Process Must Be Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>unique identifier for a record that can be used when importing record, searable &amp; etc.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation</label>
        <referenceTo>AIA_Implementation__c</referenceTo>
        <relationshipLabel>Process</relationshipLabel>
        <relationshipName>Process</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Sub_processes_c__c</fullName>
        <description>Used to count the number of Sub processes in the parent Process</description>
        <label>Number of Sub-Processes(Expected)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Tasks_SLA_Broken__c</fullName>
        <description>US463</description>
        <label>Total SLA Broken Tasks-All SubProcesses</label>
        <summarizedField>Sub_Process__c.Number_of_Tasks_SLA_Broken__c</summarizedField>
        <summaryForeignKey>Sub_Process__c.Process__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Processes</relationshipLabel>
        <relationshipName>Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <formula>IF(AND(ISPICKVAL(Implementation__r.Status__c,'Completed'),TODAY()&lt;DATE(2018,10,5)),1,
	IF(AND(Total_Tasks_All_SubProcesses__c=0, Total_Completed_Tasks_All_SubProcesses__c=0, Total_NotRequired_Tasks_All_SubProcesses__c =0),1,
		(( Total_Completed_Tasks_All_SubProcesses__c  +  Total_NotRequired_Tasks_All_SubProcesses__c ) /  Total_Tasks_All_SubProcesses__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage completion of Process based on counts of Tasks under each associated Sub Process</inlineHelpText>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Process_Condition__c</fullName>
        <description>Used to determine whether its New, Renewal, Off-Cycle, Termination of particular record</description>
        <label>Process Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Off-Cycle</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ZZZProcess Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Template</label>
        <referenceTo>Process_Type__c</referenceTo>
        <relationshipLabel>Processes</relationshipLabel>
        <relationshipName>Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <description>Used to identify the Sequence number of the record for sorting</description>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Used to identify the Stage of the Process Record</description>
        <label>Process Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Benefit Request</fullName>
                </value>
                <value>
                    <fullName>ARC Approval</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Quote Delivered</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Group Structure &amp; Admin Setup</fullName>
                </value>
                <value>
                    <fullName>Benefit Design &amp; Creation of NAEGS</fullName>
                </value>
                <value>
                    <fullName>Benefit Coding, Loading, &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment, Materials, &amp; Support</fullName>
                </value>
                <value>
                    <fullName>Enrollment &amp; ID Card Generation</fullName>
                </value>
                <value>
                    <fullName>Post Sales Document Generation</fullName>
                </value>
                <value>
                    <fullName>Billing (Monthly) Invoices</fullName>
                </value>
                <value>
                    <fullName>Account &amp; Member Tools</fullName>
                </value>
                <value>
                    <fullName>Accm Cnt Svcs</fullName>
                </value>
                <value>
                    <fullName>Account Financial Contracts</fullName>
                </value>
                <value>
                    <fullName>Account Kick-off Meeting</fullName>
                </value>
                <value>
                    <fullName>BAA</fullName>
                </value>
                <value>
                    <fullName>BR Wellness</fullName>
                </value>
                <value>
                    <fullName>Benefit Design Doc</fullName>
                </value>
                <value>
                    <fullName>Benefit Setup</fullName>
                </value>
                <value>
                    <fullName>CSR</fullName>
                </value>
                <value>
                    <fullName>CYC</fullName>
                </value>
                <value>
                    <fullName>Carve-out RX</fullName>
                </value>
                <value>
                    <fullName>Create Benefit Contract</fullName>
                </value>
                <value>
                    <fullName>EDC</fullName>
                </value>
                <value>
                    <fullName>Generate Post Sale SBCs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used to identify the status of the record</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Process_Count__c</fullName>
        <label>Number of Sub process(Actual)</label>
        <summaryForeignKey>Sub_Process__c.Process__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_BlockedTasks_All_SubProcesses__c</fullName>
        <description>US463</description>
        <label>Total BlockedTasks-All SubProcesses</label>
        <summarizedField>Sub_Process__c.Number_of_Blocked_Tasks__c</summarizedField>
        <summaryForeignKey>Sub_Process__c.Process__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Completed_Tasks_All_SubProcesses__c</fullName>
        <description>Total number of completed tasks related to all Sub Processes of this process record</description>
        <label>Total Completed Tasks-All SubProcesses</label>
        <summarizedField>Sub_Process__c.AIA_Number_of_Completed_tasks__c</summarizedField>
        <summaryForeignKey>Sub_Process__c.Process__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_NotRequired_Tasks_All_SubProcesses__c</fullName>
        <description>Total number of not required tasks related to all Sub Processes of this process record</description>
        <label>Total NotRequired Tasks-All SubProcesses</label>
        <summarizedField>Sub_Process__c.AIA_Number_of_Not_Required_Tasks__c</summarizedField>
        <summaryForeignKey>Sub_Process__c.Process__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Tasks_All_SubProcesses__c</fullName>
        <description>Total number of tasks related to all Sub Processes of this process record</description>
        <label>Total Tasks-All SubProcesses</label>
        <summarizedField>Sub_Process__c.Total_Task_Count__c</summarizedField>
        <summaryForeignKey>Sub_Process__c.Process__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Used_For__c</fullName>
        <description>Used to identify whether it’s a pre-sales/post-sales active record</description>
        <label>Used For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Post-Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>Run time Object used for AIA workplan 
AIA - Custom object used to store the Stage, type &amp; status of Runtime Process. This object is a Parent object for Run time AIA Workplan. 
This is implemented for JUNE-2018 Release.</description>
    <label>Process</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Processes</pluralLabel>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Implementation__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Implementation__c</field>
            <operation>contains</operation>
            <value>142053</value>
        </filters>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>P001</fullName>
        <active>true</active>
        <description>User cannot change the status once it is "Completed"</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(ISPICKVAL(PRIORVALUE( Status__c ),"Completed")&amp;&amp; ISCHANGED( Status__c ))</errorConditionFormula>
        <errorMessage>P001:User cannot change the status once it is "Completed"</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRO001</fullName>
        <active>true</active>
        <description>User cannot change the status once it is "Completed"</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(ISPICKVAL(PRIORVALUE( Status__c ),"Completed")&amp;&amp; ISCHANGED( Status__c ))</errorConditionFormula>
        <errorMessage>PRO001:User cannot change the status once it is "Completed"</errorMessage>
    </validationRules>
</CustomObject>